file(GLOB EXAMPLES_SRCS CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
foreach(src ${EXAMPLES_SRCS})
  get_filename_component(name ${src} NAME_WE)
  add_executable(example-${name} ${src})
  target_compile_features(example-${name} PRIVATE cxx_std_23)
  target_include_directories(example-${name} PRIVATE ${CMAKE_SOURCE_DIR}/include)
endforeach()
